--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,10 @@
-name: Build Linux Kernel Debian Package
-
+name: Build XanMod Kernel Debian Package
 on:
   workflow_dispatch:  # 手动触发工作流
   push:
     branches: [ main ]  # 在推送到 main 分支时自动运行
   schedule:
-    - cron: '0 */2 * * *'  # 每8小时运行一次
+    - cron: '0 */8 * * *'  # 每8小时运行一次
     
 jobs:
   build-kernel:
@@ -31,30 +30,33 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential flex bison libssl-dev libelf-dev bc lz4 rsync curl wget git fakeroot debhelper
+          sudo apt-get install -y build-essential flex bison libssl-dev libelf-dev bc lz4 rsync curl wget git fakeroot debhelper unzip
+
+      - name: Download XanMod kernel source
+        run: |
+          mkdir -p kernel-build
+          cd kernel-build
+          wget -O xanmod.zip https://gitlab.com/xanmod/linux/-/archive/6.14.2-xanmod1/linux-6.14.2-xanmod1.zip
+          if [ $? -ne 0 ]; then
+            echo "Failed to download XanMod kernel source"
+            exit 1
+          fi
+          unzip xanmod.zip
+          mv linux-6.14.2-xanmod1 ../linux-xanmod
 
       - name: Download kernel config file
         run: |
-          mkdir -p kernel-build
           cd kernel-build
           wget -O .config https://raw.githubusercontent.com/huifujing/amd-kernel-6.14.0/main/config-6.1.0-32-amd64
           if [ $? -ne 0 ]; then
             echo "Failed to download config file"
             exit 1
           fi
-
-      - name: Clone Linux kernel repository
-        run: |
-          wget https://gitlab.com/xanmod/linux/-/archive/6.14.2-xanmod1/linux-6.14.2-xanmod1.zip linux-6.14
-          if [ $? -ne 0 ]; then
-            echo "Failed to clone kernel repository"
-            exit 1
-          fi
+          cp .config ../linux-xanmod/
 
       - name: Prepare build environment
         run: |
-          cp kernel-build/.config linux-6.14/
-          cd linux-6.14
+          cd linux-xanmod
           # 禁用调试信息以减少构建大小
           sed -i 's/CONFIG_DEBUG_INFO=y/CONFIG_DEBUG_INFO=n/' .config
           sed -i 's/CONFIG_DEBUG_INFO_DWARF4=y/CONFIG_DEBUG_INFO_DWARF4=n/' .config
@@ -65,9 +67,9 @@ jobs:
 
       - name: Build kernel packages without debug package
         run: |
-          cd linux-6.14
+          cd linux-xanmod
           # 使用skipdbg参数避免生成调试包
-          make -j$(($(nproc) * 2)) bindeb-pkg LOCALVERSION= KDEB_PKGVERSION=$(date +%Y%m%d)-1 skipdbg=true
+          make -j$(($(nproc) * 2)) bindeb-pkg LOCALVERSION=-xanmod1 KDEB_PKGVERSION=$(date +%Y%m%d)-1 skipdbg=true
           
       - name: Find and prepare Debian packages
         id: find-debs
@@ -86,7 +88,7 @@ jobs:
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: kernel-debs
+          name: xanmod-kernel-debs
           path: ./artifacts/*.deb
           retention-days: 7
           
@@ -94,15 +96,15 @@ jobs:
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: kernel-${{ steps.find-debs.outputs.release_date }}
-          name: Linux Kernel 6.14 Build ${{ steps.find-debs.outputs.release_date }}
+          tag_name: xanmod-kernel-${{ steps.find-debs.outputs.release_date }}
+          name: XanMod Kernel 6.14.2 Build ${{ steps.find-debs.outputs.release_date }}
           draft: false
           prerelease: false
           generate_release_notes: true
           files: |
             ./artifacts/*.deb
           body: |
-            Linux Kernel 6.14 build with AMD configuration
+            XanMod Kernel 6.14.2 build with AMD configuration
             
             Built on: ${{ steps.find-debs.outputs.release_date }}
             
