--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install required Alpine packages
         run: |
           apk update
-          apk add --no-cache alpine-sdk bash curl openssl-dev perl bc git ncurses-dev libelf-dev elfutils-dev
+          apk add build-base elfutils-dev openssl-dev bc flex bison perl linux-headers zstd-dev tar
           adduser -D builder
           echo "builder ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
           chown -R builder /github/workspace
