--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,194 +1,110 @@
-name: Build Linux Kernel Alpine Package
-on:
-  workflow_dispatch:  # Manual trigger
-  push:
-    branches: [ main ]  # Run automatically on push to main branch
-  schedule:
-    - cron: '0 */8 * * *'  # Run every 8 hours
+name: Build Linux Kernel Debian Package
 
+on:
+  workflow_dispatch:  # 手动触发工作流
+  push:
+    branches: [ main ]  # 在推送到 main 分支时自动运行
+  schedule:
+    - cron: '0 */2 * * *'  # 每8小时运行一次
+    
 jobs:
   build-kernel:
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # Need write permission to create Release
+      contents: write  # 需要写入权限来创建Release
     
     steps:
       - name: Free up disk space
         run: |
+          # 删除不必要的大型文件和目录
           sudo rm -rf /usr/share/dotnet
           sudo rm -rf /opt/ghc
           sudo rm -rf /usr/local/share/boost
           sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+          # 删除 Android SDK
           sudo rm -rf /usr/local/lib/android
+          # 清理 apt 缓存
           sudo apt-get clean
+          # 查看空间状况
           df -h
 
-      - name: Create work directory
+      - name: Install dependencies
         run: |
-          mkdir -p kernel-build
-          mkdir -p artifacts
-          chmod 777 artifacts  # Ensure the output directory is writable
+          sudo apt-get update
+          sudo apt-get install -y build-essential flex bison libssl-dev libelf-dev bc lz4 rsync curl wget git fakeroot debhelper
 
       - name: Download kernel config file
         run: |
+          mkdir -p kernel-build
           cd kernel-build
-          wget -O config-6.14 https://raw.githubusercontent.com/huifujing/amd-kernel-6.14.0/main/config-6.1.0-32-amd64
+          wget -O .config https://raw.githubusercontent.com/huifujing/amd-kernel-6.14.0/main/config-6.1.0-32-amd64
           if [ $? -ne 0 ]; then
             echo "Failed to download config file"
             exit 1
           fi
 
-      - name: Create build files
+      - name: Clone Linux kernel repository
         run: |
-          # Create APKBUILD file
-          cat > kernel-build/APKBUILD << 'EOF'
-          # Maintainer: Auto Build <auto@build.local>
-          pkgname=linux-custom
-          pkgver=6.14
-          _pkgver=6.14
-          pkgrel=0
-          pkgdesc="Linux kernel with custom configuration for AMD systems"
-          url="https://www.kernel.org"
-          arch="x86_64"
-          license="GPL-2.0-only"
-          makedepends="
-              bash
-              bc
-              bison
-              flex
-              gmp-dev
-              elfutils-dev
-              installkernel
-              linux-headers
-              mpc1-dev
-              mpfr-dev
-              openssl-dev
-              perl
-              xz
-              "
-          options="!strip"
-          source="
-              https://cdn.kernel.org/pub/linux/kernel/v6.x/linux-$_pkgver.tar.xz
-              config-6.14
-              "
-          builddir="$srcdir/linux-$_pkgver"
-
-          prepare() {
-              default_prepare
-              cp "$srcdir"/config-6.14 .config
-              # Disable debug info to reduce build size
-              sed -i 's/CONFIG_DEBUG_INFO=y/CONFIG_DEBUG_INFO=n/' .config
-              sed -i 's/CONFIG_DEBUG_INFO_DWARF4=y/CONFIG_DEBUG_INFO_DWARF4=n/' .config
-              sed -i 's/CONFIG_DEBUG_INFO_BTF=y/CONFIG_DEBUG_INFO_BTF=n/' .config
-              echo "CONFIG_DEBUG_INFO_REDUCED=y" >> .config
-              make olddefconfig
-          }
-
-          build() {
-              make -j$(nproc) all
-          }
-
-          package() {
-              mkdir -p "$pkgdir"/boot "$pkgdir"/lib/modules
-              make INSTALL_MOD_PATH="$pkgdir" modules_install
-              make INSTALL_PATH="$pkgdir"/boot install
-              
-              # Create symlinks for easier booting
-              rm -f "$pkgdir"/lib/modules/$_pkgver/build "$pkgdir"/lib/modules/$_pkgver/source
-              rm -f "$pkgdir"/boot/System.map "$pkgdir"/boot/config "$pkgdir"/boot/vmlinuz
-              ln -sf "System.map-$_pkgver" "$pkgdir"/boot/System.map
-              ln -sf "config-$_pkgver" "$pkgdir"/boot/config
-              ln -sf "vmlinuz-$_pkgver" "$pkgdir"/boot/vmlinuz
-          }
-          EOF
-
-          # Create Docker build script
-          cat > kernel-build/build.sh << 'EOF'
-          #!/bin/sh
-          set -e
-          
-          # Setup Alpine build environment
-          apk update
-          apk add --no-cache alpine-sdk linux-headers git curl wget ncurses-dev openssl-dev elfutils-dev \
-            bc flex bison xz perl coreutils findutils bash lz4
-
-          # Create build user
-          adduser -D packager
-          addgroup packager abuild
-          echo "packager ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
-          
-          # Setup abuild directories and config
-          mkdir -p /home/packager/aports/custom
-          cp /src/APKBUILD /src/config-6.14 /home/packager/aports/custom/
-          chown -R packager:packager /home/packager
-
-          # Setup abuild configuration
-          mkdir -p /home/packager/.abuild
-          cat > /home/packager/.abuild/abuild.conf << 'ABUILDCONF'
-          PACKAGER="Alpine Build <build@local>"
-          PACKAGER_PRIVKEY="/home/packager/.abuild/abuild.key"
-          MAINTAINER="$PACKAGER"
-          CLEANUP="srcdir"
-          ABUILDCONF
-          chown -R packager:packager /home/packager/.abuild
-
-          # Switch to packager user and build
-          cd /home/packager/aports/custom
-          su packager -c "abuild-keygen -n -a -i"
-          # Copy the key to system-wide location
-          cp /home/packager/.abuild/*.pub /etc/apk/keys/
-          
-          # Build the package
-          su packager -c "abuild checksum"
-          su packager -c "abuild -r"
-
-          # Copy the built packages to output directory with correct permissions
-          find /home/packager/packages -name "*.apk" -type f -exec cp {} /output/ \;
-          chown -R $(stat -c "%u:%g" /output) /output
-          EOF
-          
-          chmod +x kernel-build/build.sh
-
-      - name: Build Alpine Linux kernel package with Docker
-        run: |
-          docker run --rm -v $(pwd)/kernel-build:/src -v $(pwd)/artifacts:/output alpine:edge sh /src/build.sh
-
-      - name: Find and prepare Alpine packages
-        id: find-apks
-        run: |
-          echo "release_date=$(date +%Y%m%d)" >> $GITHUB_OUTPUT
-          ls -la ./artifacts/
-          find ./artifacts -name "*.apk" -type f | sort > ./artifacts/package-list.txt
-          if [ -s ./artifacts/package-list.txt ]; then
-            echo "Found packages:"
-            cat ./artifacts/package-list.txt
-          else
-            echo "No packages were built!"
+          git clone --depth=1 https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git linux-6.14
+          if [ $? -ne 0 ]; then
+            echo "Failed to clone kernel repository"
             exit 1
           fi
+
+      - name: Prepare build environment
+        run: |
+          cp kernel-build/.config linux-6.14/
+          cd linux-6.14
+          # 禁用调试信息以减少构建大小
+          sed -i 's/CONFIG_DEBUG_INFO=y/CONFIG_DEBUG_INFO=n/' .config
+          sed -i 's/CONFIG_DEBUG_INFO_DWARF4=y/CONFIG_DEBUG_INFO_DWARF4=n/' .config
+          sed -i 's/CONFIG_DEBUG_INFO_BTF=y/CONFIG_DEBUG_INFO_BTF=n/' .config
+          # 禁用一些不必要的模块
+          echo "CONFIG_DEBUG_INFO_REDUCED=y" >> .config
+          make olddefconfig
+
+      - name: Build kernel packages without debug package
+        run: |
+          cd linux-6.14
+          # 使用skipdbg参数避免生成调试包
+          make -j$(($(nproc) * 2)) bindeb-pkg LOCALVERSION= KDEB_PKGVERSION=$(date +%Y%m%d)-1 skipdbg=true
+          
+      - name: Find and prepare Debian packages
+        id: find-debs
+        run: |
+          # 创建一个目录存放所有的deb文件
+          mkdir -p ./artifacts
+          # 复制所有的deb文件到artifacts目录
+          find . -name "*.deb" -type f -exec cp {} ./artifacts/ \;
+          echo "Found packages:"
+          ls -la ./artifacts/
+          # 创建版本号
+          echo "release_date=$(date +%Y%m%d)" >> $GITHUB_OUTPUT
+          # 创建包列表用于Release说明
+          find ./artifacts -name "*.deb" -type f | sort > ./artifacts/package-list.txt
           
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: kernel-apks
-          path: ./artifacts/*.apk
+          name: kernel-debs
+          path: ./artifacts/*.deb
           retention-days: 7
           
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: kernel-${{ steps.find-apks.outputs.release_date }}
-          name: Linux Kernel 6.14 Alpine Build ${{ steps.find-apks.outputs.release_date }}
+          tag_name: kernel-${{ steps.find-debs.outputs.release_date }}
+          name: Linux Kernel 6.14 Build ${{ steps.find-debs.outputs.release_date }}
           draft: false
           prerelease: false
           generate_release_notes: true
           files: |
-            ./artifacts/*.apk
+            ./artifacts/*.deb
           body: |
-            Linux Kernel 6.14 build with AMD configuration for Alpine Linux
+            Linux Kernel 6.14 build with AMD configuration
             
-            Built on: ${{ steps.find-apks.outputs.release_date }}
+            Built on: ${{ steps.find-debs.outputs.release_date }}
             
             ## Packages:
             ```
